--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,5 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Test rcsserver3d
       run: |
+        export LD_LIBRARY_PATH=/usr/local/lib/simspark:/usr/local/lib/rcssserver3d
         timeout -s 9 10 rcssserver3d
